testsuite/tests/esf/typecheck/should_fail/let_rec_mismatching_annot.sf
let rec f (x:Int) : Int = g
and     g (x:Int) : Int = f x
in
1